--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,29 +7,17 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-# use the latest version tag and test against an instance that supports the same version
-# e.g. tag = "0.19.4"
-lemmy_api_common = { branch = "main", git = "https://github.com/LemmyNet/lemmy.git", default-features = false }
-# the new lemmy client
-lemmy-client = "0"
-
-# import LemmyErrors from server project when ready
-# lemmy_utils = { branch = "main", git = "https://github.com/LemmyNet/lemmy.git", default-features = false, features = ["error-only"] }
-
-# for testing potential lemmy changes
-# lemmy_api_common = { path = "../lemmy/crates/api_common", default-features = false }
-# lemmy_utils = { path = "../lemmy/crates/utils", default-features = false }
-
 leptos = "0"
-leptos_actix = { version = "0", optional = true }
 leptos_meta = "0"
 leptos_router = "0"
 leptos_i18n = "0"
-
 serde = { version = "1", features = ["derive"] }
+cfg-if = "1"
+lemmy-client = { git = "https://github.com/SleeplessOne1917/lemmy-client-rs.git", branch = "main", features = [
+  "leptos",
+] }
 serde_urlencoded = "0"
 serde_json = "1"
-cfg-if = "1"
 tracing-error = "0"
 anyhow = "1"
 strum = "0"
@@ -46,11 +34,14 @@ wasm-bindgen = { version = "=0.2.89", optional = true }
 console_error_panic_hook = { version = "0", optional = true }
 
 # dependecies for server (enable when ssr set)
+leptos_actix = { version = "0", optional = true }
 actix-files = { version = "0", optional = true }
 actix-web = { version = "4", features = ["macros"], optional = true }
-actix-proxy = { version = "0", optional = true }
-actix-http = { version = "3", optional = true }
+actix-session = { version = "0.9", features = [
+  "cookie-session",
+], optional = true }
 awc = { version = "3", optional = true }
+leptos_query = "0.5.2"
 
 [package.metadata.cargo-machete]
 # strum required for error handling, actix-proxy for awc SSL, lemmy-client will become useful when it returns LemmyErrors
@@ -90,10 +81,8 @@ ssr = [
   "leptos_meta/ssr",
   "leptos_router/ssr",
   "leptos_actix",
-  "dep:actix-http",
   "dep:actix-web",
   "dep:actix-files",
-  "dep:actix-proxy",
   "dep:awc",
 ]
 
