--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,9 @@ console_error_panic_hook = { version = "0", optional = true }
 leptos_actix = { version = "0", optional = true }
 actix-files = { version = "0", optional = true }
 actix-web = { version = "4", features = ["macros"], optional = true }
-actix-session = { version = "0.9" }
+actix-session = { version = "0.9", features = [
+  "cookie-session",
+], optional = true }
 leptos_query = "0.5"
 tokio = { version = "1.36", optional = true, features = ["macros"] }
 
@@ -77,6 +79,7 @@ ssr = [
   "leptos_actix",
   "dep:actix-web",
   "dep:actix-files",
+  "dep:actix-session",
   "dep:tokio",
 ]
 
