--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,7 +76,7 @@ ssr = [
   "leptos_i18n/actix",
   "leptos_meta/ssr",
   "leptos_router/ssr",
-  "leptos_actix",
+  "dep:leptos_actix",
   "dep:actix-web",
   "dep:actix-files",
   "dep:actix-session",
