--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ hydrate = [
   "leptos_meta/hydrate",
   "leptos_router/hydrate",
   "leptos_i18n/hydrate",
+  "leptos_query/hydrate",
   "dep:wasm-bindgen",
   "dep:console_error_panic_hook",
   "dep:gloo-net",
@@ -76,6 +77,7 @@ ssr = [
   "leptos_i18n/actix",
   "leptos_meta/ssr",
   "leptos_router/ssr",
+  "leptos_query/ssr",
   "dep:leptos_actix",
   "dep:actix-web",
   "dep:actix-files",
