--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ web-sys = { version = "0", features = ["AbortController", "AbortSignal"] }
 gloo-net = { version = "0", optional = true, features = ["http"] }
 
 # specific version required for better debug messages (from leptos scaffold)
-wasm-bindgen = { version = "=0.2.89", optional = true }
+wasm-bindgen = { version = "0.2", optional = true }
 
 # required for better debug messages
 console_error_panic_hook = { version = "0", optional = true }
